--- a/.github/workflows/python_lint.yml
+++ b/.github/workflows/python_lint.yml
@@ -20,8 +20,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install pip dependencies
         run: |
-          python3 -mpip install --upgrade pip
-          python3 -mpip install flake8
+          python3 -mpip install -q --upgrade pip
+          python3 -mpip install -q flake8
       - name: Run Python Lint
         uses: advanced-security/python-lint-code-scanning-action@main
         with:
