--- a/.github/workflows/python_lint.yml
+++ b/.github/workflows/python_lint.yml
@@ -1,6 +1,4 @@
 name: Python Lint Workflow
-permissions:
-  contents: read
 on:
   push:
     branches: [ "main" ]
@@ -10,6 +8,9 @@ on:
   schedule:
     - cron: '22 3 * * 4'
   workflow_dispatch:
+permissions:
+  contents: read
+  security-events: write
 jobs:
   lint:
     runs-on: ubuntu-latest
