--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "flake8-sarif-formatter"
-version = "1.0.2"
+version = "1.0.3"
 description = "A SARIF formatter for flake8"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -23,6 +23,12 @@ dependencies = [
     "flake8>=5.0.0",
     "requests>=2.0.0",
     "beautifulsoup4>=4.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "build>=1.0.0",
+    "twine>=4.0.0",
 ]
 [project.urls]
 "Homepage" = "https://github.com/advanced-security/flake8-sarif-formatter"
